--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
 
 <body> 
 
-
+<header class="nav-container container-fluid text-center">
+        <div class="nav-wrapper row">
+            <div class="col-12">
+                <h1 class="nav-heading text-uppercase"><a href="index.html">Simon!</a></h1>
+            </div>
+            <div class="col-2 offset-4 col-md-1">
+                <button id="instructions-btn" type="button" class="btn btn-primary" data-toggle="" data-target="">
+                    <i class="fas fa-info-circle"></i>
+                </button>
+            </div>
+            <div class="col-2 col-md-1">
+                <button type="button" class="btn btn-primary">
+                    <i id="volume-btn" class="fas fa-volume-up"></i>
+                </button>
+            </div>
+        </div>
+    </header>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
