--- a/index.html
+++ b/index.html
@@ -29,7 +29,35 @@
                 </button>
             </div>
         </div>
-    </header>
+</header>
+
+<section class="container">
+        <div class="top-panel">
+            <div class="nav btn start-btn text-uppercase" onclick='startGame()'>Start</div>
+            <div class="nav round-status text-uppercase">Round 1</div>
+            <div class="nav btn strict-btn text-uppercase" onclick='strictMode()'>Strick</div>
+        </div>  
+
+        <div class="gameboard">
+            <div class="panel" id ="green"></div>
+            <div class="panel" id ="yellow"></div>
+            <div class="panel" id="blue"></div>
+            <div class="panel" id="red"></div>
+        </div>
+
+        <div class="status-bar"></div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
