--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="col-12">
                 <h1 class="nav-heading text-uppercase"><a href="index.html">Simon!</a></h1>
             </div>
-            <div class="col-2 offset-4 col-md-1">
+            <div class="col-2 offset-4 col-md-1 offset-md-5">
                 <button id="instructions-btn" type="button" class="btn btn-primary" data-toggle="" data-target="">
                     <i class="fas fa-info-circle"></i>
                 </button>
@@ -33,9 +33,9 @@
 
 <section class="container">
         <div class="top-panel">
-            <div class="nav btn start-btn text-uppercase" onclick='startGame()'>Start</div>
+            <div class="nav btn start-btn text-uppercase" onclick=''>Start</div>
             <div class="nav round-status text-uppercase">Round 1</div>
-            <div class="nav btn strict-btn text-uppercase" onclick='strictMode()'>Strick</div>
+            <div class="nav btn strict-btn text-uppercase" onclick=''>Strick</div>
         </div>  
 
         <div class="gameboard">
