changed the aanchot text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="nav-container container-fluid text-center">
         <div class="nav-wrapper row">
             <div class="col-12">
-                <h1 class="nav-heading text-uppercase"><a href="index.html">Simon!</a></h1>
+                <h1 class="nav-heading text-uppercase"><a href="index.html">Simon</a></h1>
             </div>
             <div class="col-2 offset-4 col-md-1 offset-md-5">
                 <button id="instructions-btn" type="button" class="btn btn-primary" data-toggle="" data-target="">
