added double quotes to onclick

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <section class="container">
         <div class="top-panel">
-            <div class="nav btn start-btn text-uppercase" onclick=''>Start</div>
+            <div class="nav btn start-btn text-uppercase" onclick="">Start</div>
             <div class="nav round-status text-uppercase">Round 1</div>
-            <div class="nav btn strict-btn text-uppercase" onclick=''>Strick</div>
+            <div class="nav btn strict-btn text-uppercase" onclick="">Strict</div>
         </div>  
 
         <div class="gameboard">
