status-bar dded

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <div class="panel" id="red"></div>
         </div>
 
-       
+        <div class="status-bar"></div>
+
 </section>
 
 
