--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
 
 </section>
 
+<footer class="footer-container container-fluid text-center">
+        <h6 class="footer-text"> ©
+            <a href="https://github.com/kompeet" target="_blank">Peter Komaromi</a>
+        </h6>
+</footer>
+
 
 
 
