added onclick functions

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 <section class="container">
         <div class="top-panel">
-            <div class="nav btn start-btn text-uppercase" onclick="">Start</div>
+            <div class="nav btn start-btn text-uppercase" onclick="startGame()">Start</div>
             <div class="nav round-status text-uppercase">Round 1</div>
-            <div class="nav btn strict-btn text-uppercase" onclick="">Strict</div>
+            <div class="nav btn strict-btn text-uppercase" onclick="strictMode()">Strict</div>
         </div>  
 
         <div class="gameboard">
