--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
     <title>SIMON GAME</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -51,7 +52,7 @@
 </section>
 
 <footer class="footer-container container-fluid">
-        <h6 class="footer-text"> ©
+        <h6 class="footer-text"> 2020 by
             <a href="https://github.com/kompeet" target="_blank">Peter Komaromi</a>
         </h6>
 </footer>
@@ -65,11 +66,13 @@
 
 
 
-
+    <audio data-key="green" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio>
+    <audio data-key="yellow" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio>
+    <audio data-key="red" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio>
+    <audio data-key="blue" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
     <script src="assets/javascript/main.js" type="text/javascript"></script>
 </body>
     
