footer text changed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </section>
 
 <footer class="footer-container container-fluid">
-        <h6 class="footer-text"> 2020 by
+        <h6 class="footer-text"> 2020 |
             <a href="https://github.com/kompeet" target="_blank">Peter Komaromi</a>
         </h6>
 </footer>
