updated css and js cdns

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
     <title>SIMON GAME</title>
     <!--Link to Bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--Link to Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <!--Link to Animate.css https://daneden.github.io/animate.css/-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <!--My custom stylesheet-->
-    <link rel="stylesheet" href="assets/css/style.css">   
+    <link rel="stylesheet" href="assets/css/style.css">  
+     
 </head>
 
 <body> 
@@ -64,7 +64,7 @@
         </h6>
 </footer>
 <!--Instructions modal-->
-<div class="modal fade" id="intructionsModal" tabindex="-1" role="dialog" aria-labelledby="intructionsModal" aria-hidden="true">
+<div class="modal" id="intructionsModal" tabindex="-1" role="dialog" aria-labelledby="intructionsModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
@@ -102,26 +102,16 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
     <!--Audio of colours-->
     <audio data-key="green" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio>
     <audio data-key="yellow" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio>
     <audio data-key="red" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio>
     <audio data-key="blue" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
     <!--jQuery, bootstrap.js CDNs and script link to my js files-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="assets/javascript/main.js" type="text/javascript"></script>
 </body>
-    
-
 
 </html>
