added class fade

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </h6>
 </footer>
 <!--Instructions modal-->
-<div class="modal" id="intructionsModal" tabindex="-1" role="dialog" aria-labelledby="intructionsModal" aria-hidden="true">
+<div class="modal fade" id="intructionsModal" tabindex="-1" role="dialog" aria-labelledby="intructionsModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
