--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
-            <h2 class="modal-header-title" id="modalTitle">Instructions</h2>
+            <h1 class="modal-header-title" id="modalTitle">Instructions</h1>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
             <div class="modal-body">
-            <h4 class="modal-body-title">Aim of the game</h4>
+            <h3 class="modal-body-title">Goal of the game</h3>
                 <p class="modal-body-text">
                      Replicate the displayed pattern. A new step is added each round which makes the game 
                      progressively difficult. Difficulty increases at every 5 rounds.
                  </p>
-            <h4 class="modal-body-title">How to play</h4>
+            <h3 class="modal-body-title">How to play</h3>
                 <p class="modal-body-text">
                     Press <em class="text-uppercase"><q>Start</q></em> to start the game.<br/>
                 </p>
@@ -90,7 +90,7 @@
                 <p class="modal-body-text">
                     Successfully complete 20 rounds to win the game.
                 </p>
-                <h4 class="modal-body-title">Strict mode</h4>
+                <h3 class="modal-body-title">Strict mode</h3>
                     <p class="modal-body-text">
                     <em class="text-uppercase"><q>Strict</q></em> enabled will start the game over to Round 1 when player pressed the incorrect sequence. No second chances. 
                         Enable Strict Mode at anytime of any round.
