phone responsiveness adjusted

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <div class="nav btn strict-btn text-uppercase" onclick="strictMode()">Strict</div>
         </div>  
         <!--Gameboard panel (blue/yellow/green/red colors-->
-        <div class="gameboard">
-            <div class="panel" id ="blue"></div>
-            <div class="panel" id ="yellow"></div>
-            <div class="panel" id ="green"></div>
-            <div class="panel" id ="red"></div>
+        <div class="gameboard row">
+            <div class="panel col-12" id ="blue"></div>
+            <div class="panel col-12" id ="yellow"></div>
+            <div class="panel col-12" id ="green"></div>
+            <div class="panel col-12" id ="red"></div>
         </div>
         <!--Status bar / Simon says, Your turn!-->
         <div class="status-bar"></div>
