--- a/assets/testing/indexTest.html
+++ b/assets/testing/indexTest.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.css" />
     
     <!-- Load Scripts -->
-    <script src="../../javascript/main.js"></script>
+    <script src="assets/javascript/main.js"></script>
     
     <!-- Load Tests -->
     <script src="spec/spec.js"></script>
